// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ASCII graph renderer > handles disconnected nodes 1`] = `
"╔═════════════ GRAPH ═════════════╗
║                                 ║
║                                 ║
║                                 ║
║     ┌────────┐     ┌────────┐   ║
║     │        │     │        │   ║
║     │        │     │        │   ║
║     │        │     │        │   ║
║     │        │     │        │   ║
║     │ Alone1 │     │ Alone2 │   ║
║     │        │     │        │   ║
║     │        │     │        │   ║
║     │        │     │        │   ║
║     └────────┘     └────────┘   ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
╚═════════════════════════════════╝"
`;

exports[`ASCII graph renderer > renders a 3-node DAG with edges 1`] = `
"╔══════════════ TEST DAG ══════════════╗
║                                      ║
║                                      ║
║                                      ║
║               ┌────────┐             ║
║               │        │             ║
║               │        │             ║
║               │        │             ║
║               │        │             ║
║               │ Alpha  │             ║
║               │        │             ║
║               │        │             ║
║               │        │             ║
║               └────────┘             ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║                  │    │              ║
║          +───────+    +──────+       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║          │                   │       ║
║     ┌────────┐          ┌────────┐   ║
║     │        │          │        │   ║
║     │        │          │        │   ║
║     │        │          │        │   ║
║     │        │          │        │   ║
║     │  Beta  │          │ Gamma  │   ║
║     │        │          │        │   ║
║     │        │          │        │   ║
║     │        │          │        │   ║
║     └────────┘          └────────┘   ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
║                                      ║
╚══════════════════════════════════════╝"
`;

exports[`ASCII graph renderer > renders a single node 1`] = `
"╔═════ GRAPH ══════╗
║                  ║
║                  ║
║                  ║
║     ┌────────┐   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     │ NodeA  │   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     └────────┘   ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
╚══════════════════╝"
`;

exports[`ASCII graph renderer > truncates long labels 1`] = `
"╔═════ GRAPH ══════╗
║                  ║
║                  ║
║                  ║
║     ┌────────┐   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     │ this-… │   ║
║     │        │   ║
║     │        │   ║
║     │        │   ║
║     └────────┘   ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
║                  ║
╚══════════════════╝"
`;
